--- a/spring-security-test/build.gradle
+++ b/spring-security-test/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+
+	// modelmapper 추가
+	implementation 'org.modelmapper:modelmapper:3.2.0'
 }
 
 dependencyManagement {
